# asset-snap

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
.claude/skills/resolve-issue/: SKILL.md
backend/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: asset_groups.py  snapshots.py  user_items.py
backend/app/db/: local_store.py  supabase.py
backend/app/models/: asset_group.py  snapshot.py
backend/app/services/: calculations.py
backend/data/: snapshots.json  user_items.json
backend/scripts/: apply_migration.py  migrate_json.py  setup_and_migrate.py
backend/tests/: test_auth.py  test_calculations.py  test_transfer_ownership.py
docs/: mockup-issue4.html  schema-diagram.html  기획서.md  테스트용계정.md
docs/superpowers/plans/: 2026-06-22-full-ui-redesign.md  2026-06-23-dashboard-combo-chart.md  2026-06-24-getdon-branding.md  2026-06-24-inline-delete-confirm.md  2026-06-25-ownership-transfer.md  2026-06-26-password-change.md  2026-06-29-leave-group.md  2026-06-30-delete-group.md
frontend/: CLAUDE.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  confirm-modal.spec.ts  dashboard.spec.ts  delete-group.spec.ts  empty-state.spec.ts  history.spec.ts  leave-group.spec.ts  members.spec.ts  not-found.spec.ts  settings-password.spec.ts  snapshot.spec.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  (+3 more)
scripts/: dev.ps1
supabase/migrations/: 001_init.sql  002_remove_group_type.sql
(+28 files in other folders)
